Fixed alignment for smaller screens

--- a/Project06-clock/styles.css
+++ b/Project06-clock/styles.css
@@ -191,6 +191,12 @@ body {
 
 @media (max-width: 600px) {
 
+  body {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+
   .clock {
     width: 300px;
     height: 300px;
